# twampy

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  twampy.py
.github/: CI.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/reference/: dscp-table.md  error-codes.md
docs/user-guide/: configuration.md  installation.md  usage.md
reference/dscp-table/: index.html
reference/error-codes/: index.html
search/: search_index.json
src/twampy/: __init__.py  __main__.py
tests/: __init__.py  test_cli.py  test_integration.py  test_version.py
user-guide/configuration/: index.html
user-guide/installation/: index.html
user-guide/usage/: index.html
