[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twampy"
version = "1.3"
description = "Python implementation of TWAMP/TWAMP-light (RFC 5357), STAMP (RFC 8762), and STAMP Extensions (RFC 8972)"
readme = "README.md"
authors = [
    {name = "Sven Wisotzky", email = "sven.wisotzky@nokia.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD 3-clause License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = ["twamp", "stamp", "network", "measurement", "latency", "rfc5357", "rfc8762"]

[project.urls]
Homepage = "https://github.com/nokia/twampy"
Repository = "https://github.com/nokia/twampy"
Issues = "https://github.com/nokia/twampy/issues"

[project.scripts]
twampy = "twampy.__main__:main"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"  # Keep at 3.11 for backward compatibility

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "N802",  # function name should be lowercase (allow camelCase)
    "N803",  # argument name should be lowercase (allow camelCase)
    "N806",  # variable in function should be lowercase (allow camelCase)
    "N815",  # variable in class scope should not be mixedCase (allow camelCase)
    "N816",  # variable in global scope should not be mixedCase (allow camelCase)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]


[tool.setuptools.package-data]
twampy = ["py.typed"]
